# tt-lang

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/containers/: CONTAINER_README.md  Dockerfile  Dockerfile.base  IRD_README.md  README.md  activate-install.sh  build-and-install.sh  build-docker-images.sh  build-docker-local.sh  cleanup-toolchain.sh  entrypoint.sh  get-docker-tag.sh  get-version-tag.sh  test-docker-smoke.sh
.github/scripts/: check-docker-images.sh  cleanup-ci-space.sh  cleanup-macos-toolchain.sh  compile-and-run-examples.sh  normalize-toolchain-install.sh  normalize-ttmlir-install.sh  run-tutorials.sh
.github/workflows/: call-build-docker.yml  call-build-toolchain.yml  call-build.yml  call-pre-commit.yml  call-test-dist-tutorials.yml  call-test-hardware.yml  call-test-sim.yml  on-pr.yml  on-push.yml
claude-slash-commands/: install.sh  ttl-bug.md  ttl-export.md  ttl-help.md  ttl-import.md  ttl-optimize.md  ttl-profile.md  ttl-simulate.md  ttl-test.md
claude-slash-commands/tools/: run-test.sh
cmake/modules/: BuildLLVM.cmake  BuildTTMLIRMinimal.cmake  BuildTTMetal.cmake  TTLangCompilerSetup.cmake  TTLangPython.cmake  TTLangUtils.cmake
docs/: BUILD_SYSTEM.md  EXAMPLES.md  LOWERING_MATMUL.md  LOWERING_MULTITILE.md  TRACING.md  performance-tools.md  print-debugging.md
docs/auto-profiler-examples/: demo-one.txt
docs/development/: AccumulatingComputeLowering.md  DFBManagement.md  DST_Allocation.md  DST_Utilization.md
docs/sphinx/: CMakeLists.txt  build.md  claude-skills.md  conf.py  contributor-guide.md  getting-started.md  implementation.md  index.rst  overview.md  programming-guide.md  simulator.md  testing.md  tools.md
env/: activate.in  ttlang_prompt_utils.sh
examples/: README.md  broadcast.py  broadcast_demo.py  copy_lock_error.py  eltwise_1d_broadcast.py  eltwise_add.py  eltwise_add_3d.py  eltwise_add_error.py  eltwise_pipe.py  eltwise_pipe_core3.py  general_broadcast.py  group_transfer_upsample.py  height_shard_gather.py  matmul.py  matmul_1d.py  matmul_1d_mcast.py  matmul_acc.py  matmul_explicit_acc.py  max_dfbs_warning.py  multicore_matmul.py  multinode_matmul.py  single_node_matmul.py  singlecore_matmul.py  test_transformer_block.py  tt_upsample.py
examples/elementwise-tutorial/: step_0_ttnn_base.py  step_1_single_node_single_tile_block.py  step_2_single_node_multitile_block.py  step_3_multinode.py  step_4_multinode_grid_auto.py
examples/errors/: copy_lock_error.py  eltwise_add_error.py  max_dfbs_warning.py
examples/matmul-tutorial/: step_0_ttnn_base.py  step_1_single_node_single_tile_block.py  step_2_single_node_multitile_block.py  step_3_multinode.py  step_4_multinode_grid_auto.py  step_5_multidevice_shard_m.py  step_6_multidevice_shard_k.py  step_7_multidevice_shard_k_all_reduce.py
examples/metal_examples/: README.MD
examples/tutorial/: multicore.py  multicore_grid_auto.py  multinode.py  multinode_grid_auto.py  single_core_broadcast_multitile_blocks.py  single_core_broadcast_single_tile_block.py  single_core_multitile_block.py  single_core_single_tile_block.py  single_node_broadcast_multitile_blocks.py  single_node_broadcast_single_tile_block.py  single_node_multitile_block.py  single_node_single_tile_block.py  ttnn_base.py
include/ttlang/: Config.h.in
include/ttlang-c/: Dialects.h
lib/CAPI/: CMakeLists.txt  Dialects.cpp
lib/Dialect/: CMakeLists.txt
lib/ttmlir-minimal/: CMakeLists.txt  TTKernelToCppRegistration.cpp
lib/ttmlir-minimal/CAPI/: CMakeLists.txt  Dialects.cpp  Dialects.h
python/: CMakeLists.txt  gen_elementwise.py
python/sim/: __init__.py  block.py  blockstate.py  cb.py  cbapi.py  constants.py  context_types.py  copy.py  copyhandlers.py  corecontext.py  debug_print.py  decorators.py  dfb.py  dfbstate.py  diagnostics.py  errors.py  golden_ops.py  greenlet_scheduler.py  kernel.py  math.py  operation.py  pipe.py  program.py  sharding.py  stats.py  tensoraccessor.py  trace.py  ttlang_sim.py  ttnnsim.py  typedefs.py
python/sim_stats/: __main__.py
python/ttl/: __init__.py  circular_buffer.py  compiler_options.py  config.py.in  dtype_utils.py  kernel_runner.py  layouts.py  operators.py  pipe.py  ttl.py  ttl_api.py  ttl_math.py  version.py
python/ttlang/: TTLModule.cpp  TTLangModule.cpp
python/ttmlir/: TTMLIRMinimalModule.h  TT_MLIRMinimalExtension.cpp  TT_MLIRMinimalPasses.cpp  TT_MLIRMinimalTTKernelModule.cpp  TT_MLIRMinimalTTModule.cpp  passes.py
python/utils/: __init__.py  block_allocation.py  correctness.py
scripts/: build-and-install.sh  copy-ttmetal-runtime-artifacts.sh  docker-test.sh  install-ttmetal.sh  test-dist-container.sh  test-ird-container.sh  update-submodules.sh  verify-sha.sh
test/: CMakeLists.txt  TESTING.md  lit.cfg.py  lit.site.cfg.py.in  pytest.ini.in  ttlang_test_utils.py
test/me2e/: README.md  base.py  config.py  config_specs.py  conftest.py  op_specs.py  runner.py  test_compute_ops.py  utils.py
test/python/: auto_profile_bcast_multitile.py  auto_profile_multi_store.py  auto_profile_signposts.py  conftest.py  debug_locations.py  dprint_multitile.py  elementwise_l1_acc.py  many_fused_ops.py  matmul_l1_acc_multinode.py  mesh_tensor_spmd.py  mixed_l1_dram.py  program_cache_lit.py  signpost_scopes.py  simple_add.py  simple_add_3d.py  simple_add_dram.py  simple_add_f32.py  simple_add_loop.py  simple_add_multitile.py  simple_add_with_stmt.py  simple_bcast.py  simple_fill.py  simple_fused.py  simple_matmul.py  simple_matmul_fusion.py  simple_matmul_subblock.py  simple_multicore.py  simple_multinode.py  simple_reduce.py  simple_reduce_bcast.py  simple_tensor_slice.py  simple_transpose.py  smoketest.py  softmax_compiler_allocated_dfb.py  swiglu_fused.py  test_adversarial_multicore.py  test_adversarial_multinode.py  test_axby.py  test_bcast_add.py  test_bcast_multicore.py  (+53 more)
test/scripts/: ttlang-sim-pytest
test/sim/: conftest.py  test_block.py  test_blockstate.py  test_cb.py  test_copy.py  (+17 more)
tools/ttlang-opt/: CMakeLists.txt  ttlang-opt.cpp
(+292 files in other folders)
